--- a/bootstrap/css/ul-awoe.css
+++ b/bootstrap/css/ul-awoe.css
@@ -159,6 +159,22 @@
 #share a.bds_qzone{background:url(../../bootstrap/images/qz.png)no-repeat;background-size:25px 25px;}
 #share a.bds_sqq{background:url(../../bootstrap/images/qq.png)no-repeat;background-size:25px 25px;}
  
+#share a.bds_weixin:hover{
+    background:url(../../bootstrap/images/wechat.png)no-repeat;
+    background-size:25px 25px;
+}
+#share a.bds_tsina:hover{
+    background:url(../../bootstrap/images/sina.png)no-repeat;
+    background-size:25px 25px;
+}
+#share a.bds_qzone:hover{
+    background:url(../../bootstrap/images/qzone.png)no-repeat;
+    background-size:25px 25px;
+}
+#share a.bds_sqq:hover{
+    background:url(../../bootstrap/images/q_q.png)no-repeat;
+    background-size:25px 25px;
+}
 #sharetext{
 	font-size:12px;
 	color:#626262;
