--- a/bootstrap/css/about.css
+++ b/bootstrap/css/about.css
@@ -92,4 +92,79 @@
     display:inline-block;
     vertical-align:middle;
 }
+ /* carousel css */
+.ptn-callbacks_container {
+  padding-bottom: 43px;
+  position: relative;
+  float: right;
+  width: 100%;
+  border-bottom:2px dotted #c4c4c4;
+  }
+ .ptn-callbacks_container > a:focus{
+ background: transparent url("color.png") no-repeat left top;;
+border-bottom-color:transparent;
+  }
+.ptn-callbacks_container > a:hover{
+  background: transparent url("color.png") no-repeat left top;
+  }
+  .ptn-callbacks_nav.next:hover{
+  left: auto;
+  background-position: right top;
+  right: 15px;
+  }
+    .ptn-callbacks_nav.next:focus{
+  left: auto;
+  background-position: right top;
+  right: 15px;
+  }
+.ptn-callbacks {
+  position: relative;
+  list-style: none;
+  overflow: hidden;
+  width: 100%;
+  padding: 0;
+  margin: 0;
+  }
+
+.ptn-callbacks li {
+  position: absolute;
+  width: 100%;
+  left: 0;
+  top: 0;
+  }
+
+.ptn-callbacks img {
+  display: block;
+  position: relative;
+  z-index: 1;
+  height: 720px;
+  width:100%;
+  border: 0;
+  }
+
+
+.ptn-callbacks_nav {
+  position: absolute;
+  -webkit-tap-highlight-color: rgba(0,0,0,0);
+  top: 49%;
+  left: 15px;
+  z-index: 3;
+  text-indent: -9999px;
+  overflow: hidden;
+  text-decoration: none;
+  height: 61px;
+  width: 38px;
+  background: transparent url("white.png") no-repeat left top;
+  margin-top: -45px;
+  }
+
+.ptn-callbacks_nav:active {
+   background: transparent url("color.png") no-repeat left top;
+  }
+
+.ptn-callbacks_nav.next {
+  left: auto;
+  background-position: right top;
+  right: 15px;
+  }
  
