--- a/bootstrap/css/music.css
+++ b/bootstrap/css/music.css
@@ -217,3 +217,82 @@
 .musicinnerbshare{
 	margin-left:23%;
 }
+
+ /* carousel css */
+ .musicpagecallbacks_container {
+  position: relative;
+  float: right;
+  width: 100%;
+  }
+  .musicpagecallbacks_container > a:hover {
+background: transparent url("color.png") no-repeat left top;
+  }
+    .musicpagecallbacks_container > a:focus{
+background: transparent url("color.png") no-repeat left top;;
+border-bottom-color:transparent;
+  }
+  .musicpage-callbacks_nav.next:hover{
+  left: auto;
+  background-position: right top;
+  right: 15px;
+  }
+  .musicpage-callbacks_nav.next:focus{
+  left: auto;
+  background-position: right top;
+  right: 15px;
+  }
+
+.musicpage-callbacks {
+  position: relative;
+  list-style: none;
+  overflow: hidden;
+  width: 100%;
+  padding: 0;
+  margin: 0;
+  }
+.musicpage-callbacks li {
+  position: absolute;
+  width: 100%;
+  left: 0;
+  top: 0;
+  }
+
+.musicpage-callbacks img {
+  display: block;
+  position: relative;
+  z-index: 1;
+  height:720px;
+  width:100%;
+  }
+
+
+.musicpage-callbacks_nav {
+  position: absolute;
+  -webkit-tap-highlight-color: rgba(0,0,0,0); 
+  opacity:0.7;
+  top: 51%;
+  left:13px;
+  z-index: 3;
+  text-indent: -9999px;
+  overflow: hidden;
+  text-decoration: none;
+  height: 61px;
+  width: 30px;
+  background: transparent url("white.png") no-repeat left top;
+  margin-top: -39px;
+  } 
+
+.musicpage-callbacks_nav.next {
+  left: auto;
+  background-position: right top;
+  right: 15px;
+  }
+.musicpage-callbacks_nav >a:active {
+background: transparent url("white.png") no-repeat left top;
+	
+}
+@media screen and (max-width:600px) {
+  .musicpage-callbacks_nav {
+    top: 100%;
+    }
+  }
