--- a/bootstrap/css/join.css
+++ b/bootstrap/css/join.css
@@ -76,6 +76,14 @@
     text-decoration: none;
     color:#808080;
 }
+.modal-content{
+	height:750px;
+	width:674px;
+	border-radius:0;
+}
+.modal-footer{
+	border:0;
+}
 .jobname{
     text-align: left;
     margin-top: 60px;
@@ -179,4 +187,62 @@
     padding-bottom:16px;
     color:#5a5a5a;
     border-bottom:1px solid #c8c8c8;	
+}
+ /* dropdown */
+.dropdowndepart{
+    left:4%;
+    width:92%;
+    padding:0;
+    text-align: center;
+    border-bottom: 0px solid #761c19;
+    margin-top:8px;
+    min-width: 40px;
+}
+.dropdowndepart>li>a {
+    display: block;
+    padding-top:5px;
+    padding-bottom:5px;
+    clear: both;
+    font-weight: 400;
+    line-height: 1.42857143;
+    color: #FFF;
+    white-space: nowrap;
+    text-align:center;
+    /*border-top: 1px solid #fff;*/
+}
+.dropdowndepart>li>a:hover{
+    color:#626262;
+    cursor: pointer;
+}
+
+.dropdownmenucust{
+    border-radius: 0px;
+    position:absolute ;
+    z-index:1004;   
+}
+.dropdownmenucust li{
+    width:100%;
+    background-color: #e4e4e4;
+}
+.dropdownmenucust li>a:hover{
+    width:100%;   
+}
+.dropdown-list-line {
+    height: 1px;
+    padding: 0 40%;
+}
+.dropdown-list-line span {
+    display: block;
+    height: inherit;
+    background: #fff;
+     width:30px;
+}
+.navcust{
+    width:100%;
+    float:left !important;
+}
+.navcust li{
+    /*width:20%;*/
+    margin-left:0px!important;
+    margin-right:0px!important;
 }
