--- a/bootstrap/css/global.css
+++ b/bootstrap/css/global.css
@@ -443,7 +443,7 @@ font-size:8px;
     height: 24px;
     position: absolute;
     cursor: pointer;
-    background: url(../images/close.png) no-repeat;
+    background: url(../images/footer_close.png) no-repeat;
     right: 10px;
     top:10px;
     z-index: 9999;
