--- a/bootstrap/css/home.css
+++ b/bootstrap/css/home.css
@@ -78,11 +78,11 @@
   width: 100%;
   }
 .callbacks_container > a:focus{
-background: transparent url("home_left.png") no-repeat left top;;
+background: transparent url("../images/home_left.png") no-repeat left top;;
 border-bottom-color:transparent;
   }
   .callbacks_container.next > a:focus{
-background: transparent url("home_right.png") no-repeat left top;;
+background: transparent url("../images/home_right.png") no-repeat left top;;
 border-bottom-color:transparent;
   }
 .callbacks {
@@ -122,14 +122,14 @@ border-bottom-color:transparent;
   text-decoration: none;
   height: 38px;
   width: 28px;
-  background: transparent url("home_left.png") no-repeat left top;
+  background: transparent url("../images/home_left.png") no-repeat left top;
   margin-top: -32px;
   border-bottom-color:transparent;
   opacity:0.7;
   }
 
 .callbacks_nav:active {
-    background: transparent url("home_right.png") no-repeat left top;
+    background: transparent url("../images/home_right.png") no-repeat left top;
     border-bottom-color:transparent;
     border-bottom:none;
   }
@@ -137,12 +137,12 @@ border-bottom-color:transparent;
 
 .callbacks_nav.next {
   left: auto;
-  background: transparent url("home_right.png") no-repeat right top;
+  background: transparent url("../images/home_right.png") no-repeat right top;
   right: 0;
   }
   .callbacks_nav.next:focus {
   left: auto;
-  background: transparent url("home_right.png") no-repeat right top;
+  background: transparent url("../images/home_right.png") no-repeat right top;
   right: 0;
   }
 @media screen and (max-width:600px) {
