--- a/bootstrap/css/ul-awoe.css
+++ b/bootstrap/css/ul-awoe.css
@@ -262,10 +262,10 @@
   }
   
   .ulcallbacks_container > a:hover {
-background: transparent url("color.png") no-repeat left top;
+background: transparent url("../images/color.png") no-repeat left top;
   }
   .ulcallbacks_container > a:focus{
-background: transparent url("color.png") no-repeat left top;;
+background: transparent url("../images/color.png") no-repeat left top;;
 border-bottom-color:transparent;
   }
   .ul-callbacks_nav.next:hover{
@@ -316,7 +316,7 @@ border-bottom-color:transparent;
   text-decoration: none;
   height: 61px;
   width: 30px;
-  background: transparent url("white.png") no-repeat left top;
+  background: transparent url("../images/white.png") no-repeat left top;
   margin-top: -39px;
   } 
 
@@ -326,7 +326,7 @@ border-bottom-color:transparent;
   right: 15px;
   }
 .ul-callbacks_nav >a:active {
-background: transparent url("white.png") no-repeat left top;
+background: transparent url("../images/white.png") no-repeat left top;
 	
 }
 @media screen and (max-width:600px) {
@@ -343,10 +343,10 @@ background: transparent url("white.png") no-repeat left top;
   }
   
   .awoecallbacks_container > a:hover {
-background: transparent url("color.png") no-repeat left top;
+background: transparent url("../images/color.png") no-repeat left top;
   }
   .awoecallbacks_container > a:focus{
-background: transparent url("color.png") no-repeat left top;;
+background: transparent url("../images/color.png") no-repeat left top;;
 border-bottom-color:transparent;
   }
   .awoe-callbacks_nav.next:hover{
@@ -397,7 +397,7 @@ border-bottom-color:transparent;
   text-decoration: none;
   height: 61px;
   width: 30px;
-  background: transparent url("white.png") no-repeat left top;
+  background: transparent url("../images/white.png") no-repeat left top;
   margin-top: -39px;
   } 
 
@@ -407,7 +407,7 @@ border-bottom-color:transparent;
   right: 15px;
   }
 .awoe-callbacks_nav >a:active {
-background: transparent url("white.png") no-repeat left top;
+background: transparent url("../images/white.png") no-repeat left top;
 	
 }
 @media screen and (max-width:600px) {
