--- a/bootstrap/css/global.css
+++ b/bootstrap/css/global.css
@@ -239,62 +239,64 @@ border-image:none;
  width:100%;
  }
    /* left*/
- .footerleftdiv1{
+
+.footerleftdiv1{
     display:inline;
-    margin-top: 20px;
+    margin-top: 16px;
     float:left;
     width:162px;
     border-right: 1px solid #d2d2d2;
-    height:230px;
+    height:178px;
     margin-bottom:52px;
 }
 .footerleftdiv2{
     display:inline;
-    margin-top: 20px;
+    margin-top: 16px;
     float:left;
     width:162px;
     border-right: 1px solid #d2d2d2;
-    height:230px;
+    height:178px;
     margin-bottom:52px;
 }
-
 .footerleftdiv3{
     display:inline;
-    margin-top: 20px;
+    margin-top: 16px;
     float:left;
     width:166px;
     border-right: 1px solid #d2d2d2;
-    height:230px;
+    height:178px;
     margin-bottom:52px;
 }
 .footerleftdiv4{
     display:inline;
-    margin-top: 20px;
+    margin-top: 16px;
     float:left;
     width:185px;
     border-right: 1px solid #d2d2d2;
-    height:230px;
+    height:178px;
     margin-bottom:52px;
 }
- .footertype{
+
+  .footertype1{
  height:73px;
  width:164px;
  }
- .footertype img{
- width:150px;
+ .footertype1 img{
+ width:100px;
  height:auto;
  float:left;
- margin-left:10px;
+ margin-left:20%;
+ margin-top:10px;
  }
-  .footertype2{
+ .footertype2{
  height:73px;
- width:164px;
+ width:168px;
  }
  .footertype2 img{
  width:100px;
  height:auto;
  float:left;
- margin-left:20%;
+  margin-left:18%;
  margin-top:10px;
  }
   .footertype3{
@@ -305,6 +307,7 @@ border-image:none;
  width:150px;
  height:auto;
  float:left;
+  margin-left:5%;
  }
   .footertype4{
   height:73px;
@@ -323,15 +326,22 @@ border-image:none;
  font-size:10px;
  color:#808080;
  margin-top:8px;
- width:52px;
+ width:60px;
  margin-left:56px;
+ }
+ .footerdetail2{
+ font-size:10px;
+ color:#808080;
+ margin-top:8px;
+ width:65px;
+ margin-left:50px;
  }
  .footerdetail3{
  font-size:10px;
  color:#808080;
  margin-top:8px;
  width:80px;
- margin-left:44px;
+ margin-left:55px;
  text-align:left;
 
  }
@@ -344,7 +354,7 @@ border-image:none;
  color:#808080;
  margin-top:8px;
  width:85px;
- margin-left:51px;
+ margin-left:55px;
  text-align:left;
 
  }
@@ -357,7 +367,7 @@ border-image:none;
  
  }
  .footerlogos img{
- width:16px;
+ width:20px;
  height:auto;
  border-radius:50%;
  }
@@ -367,11 +377,11 @@ border-image:none;
     float:right;
     width: 40%;
     margin-bottom: 52px;
-    margin-top: 20px;
-    padding-top:160px;
+    margin-top: 120px;
+    padding-top:10px;
     text-align: right;
     color:#808080;
-    height:230px;
+    height:178px;
     padding-right:3.4%;
     font-size:8px;
 }
@@ -384,7 +394,7 @@ font-size:8px;
 #info_str{
     filter:alpha(opacity=90);
     opacity:0.9;
-    right: 7%;
+    right: 3%;
     top:88.5%;
     position: fixed;
     z-index: 1049;
@@ -393,7 +403,7 @@ font-size:8px;
 #show_info{
     filter:alpha(opacity=90);
     opacity:0.9;
-    right: 5%;
+    right: 0%;
     top:88%;
     position: fixed;
     z-index: 1049
@@ -402,7 +412,7 @@ font-size:8px;
 #top_str{
     filter:alpha(opacity=90);
     opacity:0.9;
-    right: 7%;
+    right: 3%;
     bottom:13.5%;
     position: fixed;
     z-index: 1049;
@@ -411,7 +421,7 @@ font-size:8px;
 #to_top{
     filter:alpha(opacity=90);
     opacity:0.9;
-    right: 5%;
+    right: 0%;
     bottom:13%;
     position: fixed;
     z-index: 1049
@@ -507,14 +517,17 @@ font-size:8px;
 .lan-dropdowncust{	
     text-decoration: none;
     color:#808080;
+    border:none;
 }
-.lan-dropdowncust:focus{
+.lan-dropdowncust:focus {
     text-decoration: none;
     color:#808080;
+     border:none;
 }
 .lan-dropdowncust:hover{
     text-decoration: none;
-    color:#000;
+    color:#4d4d4d;
+    border:none;
 }
 .choseLan{
     min-width: 20px;
