--- a/bootstrap/css/global.css
+++ b/bootstrap/css/global.css
@@ -176,6 +176,15 @@ border-image:none;
     border-image:none;
 }
 
+/* English li*/
+.languge-en-ulli,
+.languge-en-awoeli {
+    width: 10% !important;
+}
+.languge-en-musicli {
+    width: 12% !important;
+}
+
   /* dropdown*/
 
 
@@ -1001,11 +1010,4 @@ body {
 
 .mob_menu{
     display: none;
-}
-.languge-en-ulli,
-.languge-en-awoeli {
-    width: 10% !important;
-}
-.languge-en-musicli {
-    width: 12% !important;
 }
