--- a/bootstrap/css/global.css
+++ b/bootstrap/css/global.css
@@ -336,9 +336,10 @@ border-image:none;
  .footerdetail{
  font-size:10px;
  color:#808080;
- margin-top:6px;
- width:57px;
+ margin-top:14px;
+ width:80px;
  margin-left:53px;
+ text-align:left;
  }
  .footerdetials2{
  float:right;
@@ -348,16 +349,18 @@ border-image:none;
  .footerdetail2{
  font-size:10px;
  color:#808080;
- width:66px;
+ width:70px;
  margin-left:46px;
+  text-align:left;
  }
  .footerdetail3{
  font-size:10px;
  color:#808080;
- margin-top:6px;
- width:80px;
+ margin-top:14px;
+ width:82px;
  margin-left:42px;
  text-align:left;
+ 
 
  }
  .footerdetials3{
@@ -368,8 +371,8 @@ border-image:none;
  .footerdetail4{
  font-size:10px;
  color:#808080;
- margin-top:6px;
- width:85px;
+ margin-top:14px;
+ width:88px;
  margin-left:52px;
  text-align:left;
 
@@ -379,8 +382,12 @@ border-image:none;
  width:183px;
  margin-top:12px;
  }
+ .footertext{
+ color:#808080;
+ }
  .footerlogos{
- margin-right:5px;
+ margin-right:12px;
+ float:left;
  
  }
  .footerlogos img{
@@ -853,6 +860,7 @@ a,
 a:focus,
 a:hover {
     color: transparent;
+    border:none;
 }
 
 /* Custom default button */
